# inventory-saas

./: .gitignore  LICENSE  README.md  conftest.py  main.py  pyproject.toml  pytest.ini  requirements.txt
accounts/: admin.py  choices.py  constants.py  managers.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_account_company.py  0002_initial.py  0003_alter_account_role.py  0004_account_onboarding_completed.py  0005_alter_account_role.py
core/: exceptions.py  settings.py  urls.py  utils.py
inventory/: factories.py  filters.py  models.py  permissions.py  serializers.py  tests.py  urls.py  utils.py  views.py
inventory/management/commands/: populate_data.py
inventory/migrations/: 0001_initial.py  0002_alter_category_options_alter_company_options_and_more.py
inventory/serializers/: __init__.py  attribute_serializers.py  category_serializers.py  company_serializers.py  error_serializers.py  product_serializers.py  stock_serializers.py  template_serializers.py  warehouse_serializers.py
inventory/views/: __init__.py  attribute_views.py  category_views.py  company_views.py  product_views.py  report_views.py  setup_views.py  stock_views.py  template_views.py  warehouse_views.py
